Correcao no arquivo html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       content="Projeto utilizando bootstrap para aperfeiçoar o conhecimento"
     />
     <meta name="author" content="Calebe de Vasconcelos Xavier" />
-    <title>Boostrap Carousel</title>
+    <title>Bootstrap Carousel</title>
   </head>
   <body></body>
 </html>
