--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#"
+            ><img src="img/logo.jpg" alt="logo Pergola" width="50px"
+          /></a>
           <button
             class="navbar-toggler"
             type="button"
@@ -38,10 +40,12 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#"
+                  >Conheça</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#">Parceiros</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -52,7 +56,7 @@
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  Dropdown
+                  Nossos Sabores
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="#">Action</a></li>
@@ -69,7 +73,7 @@
                   href="#"
                   tabindex="-1"
                   aria-disabled="true"
-                  >Disabled</a
+                  >Agende uma visita! (Ainda não disponivel)</a
                 >
               </li>
             </ul>
@@ -77,11 +81,11 @@
               <input
                 class="form-control me-2"
                 type="search"
-                placeholder="Search"
+                placeholder="Pesquisar"
                 aria-label="Search"
               />
               <button class="btn btn-outline-success" type="submit">
-                Search
+                Pesquisar
               </button>
             </form>
           </div>
