--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Parceiros</a>
+                <a class="nav-link" href="#">P</a>
               </li>
               <li class="nav-item dropdown">
                 <a
