--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"
             ><img src="img/logo.jpg" alt="logo Pergola" width="50px"
@@ -92,5 +92,12 @@
         </div>
       </nav>
     </header>
+    <main>
+      <section id="quemsomos">
+        <div class="container-fluid text-center quem-somos">
+          <p>Teste</p>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
