Algumas alterações do curso, mas não gostei, irei refazer depois

--- a/index.html
+++ b/index.html
@@ -1,103 +1,102 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Projeto utilizando bootstrap para aperfeiçoar o conhecimento"
-    />
-    <meta name="author" content="Calebe de Vasconcelos Xavier" />
-    <title>Bootstrap Carousel</title>
 
-    <!--Bootstrap e link css adicionado abaixo-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="bootstrap/css/bootstrap.min.css"
-    />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
-  </head>
-  <body>
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"
-            ><img src="img/logo.jpg" alt="logo Pergola" width="50px"
-          /></a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"
-                  >Conheça</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Parceiros</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  id="navbarDropdown"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Nossos Sabores
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider" /></li>
-                  <li>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link disabled"
-                  href="#"
-                  tabindex="-1"
-                  aria-disabled="true"
-                  >Agende uma visita! (Ainda não disponivel)</a
-                >
-              </li>
-            </ul>
-            <form class="d-flex">
-              <input
-                class="form-control me-2"
-                type="search"
-                placeholder="Pesquisar"
-                aria-label="Search"
-              />
-              <button class="btn btn-outline-success" type="submit">
-                Pesquisar
-              </button>
-            </form>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Projeto utilizando bootstrap para aperfeiçoar o conhecimento" />
+  <meta name="author" content="Calebe de Vasconcelos Xavier" />
+  <title>Bootstrap Carousel</title>
+
+  <!--Bootstrap e link css adicionado abaixo-->
+  <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css" />
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
+</head>
+
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img src="img/logo.jpg" alt="logo Pergola" width="50px" /></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Conheça</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#parceiros">Parceiros</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Nossos Sabores
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li>
+                  <hr class="dropdown-divider" />
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Agende uma visita! (Ainda não
+                disponivel)</a>
+            </li>
+          </ul>
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Search" />
+            <button class="btn btn-outline-success" type="submit">
+              Pesquisar
+            </button>
+          </form>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <section id="quemsomos">
+      <div class="container-fluid text-center quem-somos">
+        <h3>Quem somos</h3>
+        <img src="img/site1.jpeg" class="rounded-circle" width="400" height="400" alt="Time aqui">
+        <p>Somos um time comprometido com o que fazemos</p>
+      </div>
+    </section>
+
+    <section id="parceiros">
+      <div class="container-fluid text-center margin parceiros">
+        <h3>Parceiros</h3>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-4">
+              <img src="img/site2.jpeg" width="100%" alt="Parceiros">
+            </div>
+            <div class="col-lg-4">
+              <img src="img/site2.jpeg" width="100%" alt="Parceiros">
+            </div>
+            <div class="col-lg-4">
+              <img src="img/site2.jpeg" width="100%" alt="Parceiros">
+            </div>
           </div>
         </div>
-      </nav>
-    </header>
-    <main>
-      <section id="quemsomos">
-        <div class="container-fluid text-center quem-somos">
-          <p>Teste</p>
-        </div>
-      </section>
-    </main>
-  </body>
+      </div>
+
+    </section>
+
+    <section id="servicos">
+      <class class="container-fluid text-center margin">
+
+      </class>
+    </section>
+  </main>
+</body>
+
 </html>
